--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "expo": "^27.0.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
-    "react-navigation": "^2.14.2",
+    "react-navigation": "^2.16.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "render-if": "^0.1.1"
   }
 }
