--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "^27.0.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-dialog": "^5.1.0",
     "react-native-navigation": "^1.1.486",
     "react-navigation": "^2.16.0",
     "react-redux": "^5.0.7",
